# ai-plastic-recycling-hybrid

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
docker/: Dockerfile.api  Dockerfile.monitoring  Dockerfile.robot  Dockerfile.vision  docker-compose.yml
k8s/config/: config.yaml
k8s/deployments/: api.yaml  monitoring.yaml  robot.yaml  vision.yaml
k8s/secrets/: secrets.yaml
k8s/services/: services.yaml
k8s/storage/: storage.yaml
keys/: .gitignore  README.md
models/: .gitignore  README.md  download_models.py  model_config.yml
monitoring/: start.sh
src/: __init__.py
src/api/: main.py  schemas.py
src/common/: config.py  security.py
src/database/: connection.py  models.py
src/robotics/: robot_controller.py
src/vision/: __init__.py  plastic_classifier.py
tests/: __init__.py  test_vision.py
tests/unit/: test_models.py  test_robot.py  test_vision.py
